--- a/front_end/models/trace/lantern/core/BUILD.gn
+++ b/front_end/models/trace/lantern/core/BUILD.gn
@@ -33,7 +33,8 @@ ts_library("unittests") {
   sources = [ "NetworkAnalyzer.test.ts" ]
 
   deps = [
-    "../:bundle",
+    "../:bundle",  # Lantern bundle
+    "../../:bundle",  # Trace engine bundle
     "../testing:bundle",
   ]
 }
