Render details for user timings.
Also (as suggested by Paul), this adds `Timestamp` to user timings, and removes `Total Time` and `Self Time` from events with duration 0.

Bug: 345418915
Change-Id: I218abbc5e0199413a8b8fad174d121204dabb36e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5683364
Commit-Queue: Jasmine Yan <jasmineyan@google.com>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -84,6 +84,7 @@ copy_to_gen("traces") {
     "two-functions-recursion.json.gz",
     "two-workers.json.gz",
     "user-timings-complex.json.gz",
+    "user-timings-details.json.gz",
     "user-timings.json.gz",
     "web-dev-initial-url.json.gz",
     "web-dev-modifications.json.gz",
