Add support for running tests in a full checkout.
Allows the npm run test script to work when running from the
third_party/devtools-frontend/src folder of a full chromium
checkout. In this case it will trigger a chrome build and use
that binary instead of a downloaded release.

Bug: None
Change-Id: Ib53ee477954f298f443b0f528c68b25293701338
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5683365
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Eric Leese <leese@google.com>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -32,6 +32,9 @@ node_ts_library("run") {
   deps = [ "shared" ]
 }
 
-source_root = rebase_path("//$devtools_location", "$target_gen_dir")
-write_file("$target_gen_dir/build.js",
-           "module.exports = {SOURCE_ROOT: '$source_root'};")
+source_root = rebase_path("//$devtools_location", target_gen_dir)
+checkout_root = rebase_path("//", target_gen_dir)
+build_root = rebase_path(root_build_dir, target_gen_dir)
+write_file(
+    "$target_gen_dir/build.js",
+    "module.exports = {SOURCE_ROOT: '$source_root', CHECKOUT_ROOT: '$checkout_root', BUILD_ROOT: '$build_root', BUILD_WITH_CHROMIUM: $build_with_chromium};")
