[Freestyler] Add rating and feedback buttons
Screenshot:
https://b.corp.google.com/action/issues/348588278/attachments/57832770?download=false


Bug: 348588278,351973646
Change-Id: I18d8106f1097534c62292afd3863c428c12ac564
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5692018
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1346,7 +1346,9 @@ grd_files_debug_sources = [
   "front_end/panels/freestyler/FreestylerEvaluateAction.js",
   "front_end/panels/freestyler/FreestylerPanel.js",
   "front_end/panels/freestyler/components/FreestylerChatUi.js",
+  "front_end/panels/freestyler/components/ProvideFeedback.js",
   "front_end/panels/freestyler/components/freestylerChatUi.css.js",
+  "front_end/panels/freestyler/components/provideFeedback.css.js",
   "front_end/panels/freestyler/freestylerPanel.css.js",
   "front_end/panels/issues/AffectedBlockedByResponseView.js",
   "front_end/panels/issues/AffectedCookiesView.js",
