[RPP] Introduce estimated savings to insights, starting with RenderBlocking
This adds estimated savings from Lantern to the RenderBlocking
insight - per metric (FCP and LCP in this case), and per-url.

This is similar to what Lighthouse does [1], except that:

* Unused CSS is not considered in the savings, which makes the
  estimated savings a bit higher than it should be realistically.
  We don't yet have this information in the trace.
* No AMP-specific handling.
* LCP savings is not implemented yet for this insight (follow-up)

A few other minor changes in this CL:

* Eagerly generates #data and #insights when calling
  `TraceProcessor.parse`
* Change Lantern.Metric.compute to not return a Promise

[1] https://github.com/GoogleChrome/lighthouse/blob/v12.1.0/core/audits/byte-efficiency/render-blocking-resources.js

Bug: 313905799
Change-Id: Id1c6d00e01b2f54c0503fe26b93ac7648509ccab
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5684935
Reviewed-by: Adam Raine <asraine@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -17,7 +17,10 @@ devtools_module("insights") {
     "types.ts",
   ]
 
-  deps = [ "../handlers:bundle" ]
+  deps = [
+    "../handlers:bundle",
+    "../lantern:bundle",
+  ]
 }
 
 devtools_entrypoint("bundle") {
