[RPP Observations] Add page and device scope selectors
Example:
https://screenshot.googleplex.com/5oPAy7AojQkGtLr

"No data" example:
https://screenshot.googleplex.com/A6kBfc8jEKEZvvD

- Page scope selector for choosing URL/origin scope
- Device mode selector for choosing desktop/mobile/all/auto
- Auto device optoin will select the field data based on emulation
- URL -> origin fallback is removed. I'm concerned that doing this
  automatically will be unexpected when the user nagiates to different
  pages.
- Device options will show "No data" if there is no CrUX data for that
  device.
- Page scope options will show "No data" if there is no CrUX data for
  any device in that page scope.
- Removes tablet specific field data

Bug: 313906362
Change-Id: I4f72945a2a7805a447f963598cbef08a72f12154
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5691494
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -57,6 +57,7 @@ devtools_module("components") {
     "../../../ui/legacy/components/perf_ui:bundle",
     "../../../ui/lit-html:bundle",
     "../../../ui/visual_logging:bundle",
+    "../../emulation:bundle",
     "../../mobile_throttling:bundle",
   ]
 }
