[RPP] Add time breakdown information in the details vew
screenshots: https://screenshot.googleplex.com/7hnTVTEHEva3SwZ

Bug: 347188716
Change-Id: I3e9397c1084c08ac61b3cde78d3ccb73fc49c19c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5692030
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -13,6 +13,7 @@ generate_css("css_files") {
     "entryLabelOverlay.css",
     "interactionBreakdown.css",
     "liveMetricsView.css",
+    "networkRequestDetails.css",
     "networkRequestTooltip.css",
     "sidebar.css",
     "sidebarAnnotationsTab.css",
@@ -31,6 +32,7 @@ devtools_module("components") {
     "EntryLabelOverlay.ts",
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
+    "NetworkRequestDetails.ts",
     "NetworkRequestTooltip.ts",
     "NetworkThrottlingSelector.ts",
     "Sidebar.ts",
@@ -87,6 +89,7 @@ ts_library("unittests") {
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LiveMetricsView.test.ts",
+    "NetworkRequestDetails.test.ts",
     "NetworkThrottlingSelector.test.ts",
     "SidebarAnnotationsTab.test.ts",
     "SidebarInsight.test.ts",
