--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1734,6 +1734,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/EntryLabelOverlay.js",
   "front_end/panels/timeline/components/InteractionBreakdown.js",
   "front_end/panels/timeline/components/LiveMetricsView.js",
+  "front_end/panels/timeline/components/NetworkRequestDetails.js",
   "front_end/panels/timeline/components/NetworkRequestTooltip.js",
   "front_end/panels/timeline/components/NetworkThrottlingSelector.js",
   "front_end/panels/timeline/components/Sidebar.js",
@@ -1746,6 +1747,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/entryLabelOverlay.css.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
+  "front_end/panels/timeline/components/networkRequestDetails.css.js",
   "front_end/panels/timeline/components/networkRequestTooltip.css.js",
   "front_end/panels/timeline/components/sidebar.css.js",
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
