--- a/front_end/models/trace/lantern/metrics/BUILD.gn
+++ b/front_end/models/trace/lantern/metrics/BUILD.gn
@@ -53,4 +53,6 @@ ts_library("unittests") {
     "../:bundle",
     "../testing:bundle",
   ]
+
+  public_deps = [ "../../../../panels/timeline/fixtures/traces" ]
 }
