--- a/front_end/models/trace/lantern/simulation/BUILD.gn
+++ b/front_end/models/trace/lantern/simulation/BUILD.gn
@@ -50,4 +50,6 @@ ts_library("unittests") {
     "../../:bundle",  # Trace engine bundle
     "../testing:bundle",
   ]
+
+  public_deps = [ "../../../../panels/timeline/fixtures/traces" ]
 }
