--- a/front_end/models/source_map_scopes/BUILD.gn
+++ b/front_end/models/source_map_scopes/BUILD.gn
@@ -10,6 +10,7 @@ import("../visibility.gni")
 devtools_module("source_map_scopes") {
   sources = [
     "NamesResolver.ts",
+    "ScopeChainModel.ts",
     "ScopeTreeCache.ts",
   ]
 
