RPP: show sidebar metrics per-navigation
This CL updates the sidebar to show metrics per navigation.

It does not yet update the insights to be shown per-navigation, but that
will come in a follow-up CL (this work is all behind a flag anyway).

Bug: 348591291
Change-Id: I5230810d42c33f4d5a869414bfb367e069b71712
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5688773
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1741,6 +1741,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/Sidebar.js",
   "front_end/panels/timeline/components/SidebarAnnotationsTab.js",
   "front_end/panels/timeline/components/SidebarInsight.js",
+  "front_end/panels/timeline/components/SidebarSingleNavigation.js",
   "front_end/panels/timeline/components/TimeRangeOverlay.js",
   "front_end/panels/timeline/components/TimespanBreakdownOverlay.js",
   "front_end/panels/timeline/components/Utils.js",
@@ -1753,6 +1754,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/sidebar.css.js",
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
   "front_end/panels/timeline/components/sidebarInsight.css.js",
+  "front_end/panels/timeline/components/sidebarSingleNavigation.css.js",
   "front_end/panels/timeline/components/timeRangeOverlay.css.js",
   "front_end/panels/timeline/components/timespanBreakdownOverlay.css.js",
   "front_end/panels/timeline/extensions/ExtensionUI.js",
