--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -18,6 +18,7 @@ generate_css("css_files") {
     "sidebar.css",
     "sidebarAnnotationsTab.css",
     "sidebarInsight.css",
+    "sidebarSingleNavigation.css",
     "timeRangeOverlay.css",
     "timespanBreakdownOverlay.css",
   ]
@@ -38,6 +39,7 @@ devtools_module("components") {
     "Sidebar.ts",
     "SidebarAnnotationsTab.ts",
     "SidebarInsight.ts",
+    "SidebarSingleNavigation.ts",
     "TimeRangeOverlay.ts",
     "TimespanBreakdownOverlay.ts",
     "Utils.ts",
