[RPP Observations] Add field setup dialog
Before setup:
https://screenshot.googleplex.com/7XuTxQ8eqhgVy3Y

Dialog:
https://screenshot.googleplex.com/9ziXkpbXST7cuMY

Bug: 313906362
Change-Id: Iab4508ff8f8a3aeeaf79d90946fd5c55cac2cc0c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5698231
Reviewed-by: Andres Olivares <andoli@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -11,6 +11,7 @@ generate_css("css_files") {
   sources = [
     "breadcrumbsUI.css",
     "entryLabelOverlay.css",
+    "fieldSettingsDialog.css",
     "interactionBreakdown.css",
     "liveMetricsView.css",
     "networkRequestDetails.css",
@@ -31,6 +32,7 @@ devtools_module("components") {
     "CPUThrottlingSelector.ts",
     "DetailsView.ts",
     "EntryLabelOverlay.ts",
+    "FieldSettingsDialog.ts",
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
     "NetworkRequestDetails.ts",
@@ -88,6 +90,7 @@ ts_library("unittests") {
   sources = [
     "BreadcrumbsUI.test.ts",
     "CPUThrottlingSelector.test.ts",
+    "FieldSettingsDialog.test.ts",
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
     "LiveMetricsView.test.ts",
