--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1733,6 +1733,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/CPUThrottlingSelector.js",
   "front_end/panels/timeline/components/DetailsView.js",
   "front_end/panels/timeline/components/EntryLabelOverlay.js",
+  "front_end/panels/timeline/components/FieldSettingsDialog.js",
   "front_end/panels/timeline/components/InteractionBreakdown.js",
   "front_end/panels/timeline/components/LiveMetricsView.js",
   "front_end/panels/timeline/components/NetworkRequestDetails.js",
@@ -1747,6 +1748,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/Utils.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/entryLabelOverlay.css.js",
+  "front_end/panels/timeline/components/fieldSettingsDialog.css.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
   "front_end/panels/timeline/components/networkRequestDetails.css.js",
