--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -189,6 +189,7 @@ group("unittests") {
     "panels/sources/components:unittests",
     "panels/timeline:unittests",
     "panels/timeline/components:unittests",
+    "panels/timeline/components/insights:unittests",
     "panels/timeline/fixtures/traces",
     "panels/timeline/track_appenders:unittests",
     "panels/utils:unittests",
