--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -18,7 +18,6 @@ generate_css("css_files") {
     "networkRequestTooltip.css",
     "sidebar.css",
     "sidebarAnnotationsTab.css",
-    "sidebarInsight.css",
     "sidebarSingleNavigation.css",
     "timeRangeOverlay.css",
     "timespanBreakdownOverlay.css",
@@ -40,7 +39,6 @@ devtools_module("components") {
     "NetworkThrottlingSelector.ts",
     "Sidebar.ts",
     "SidebarAnnotationsTab.ts",
-    "SidebarInsight.ts",
     "SidebarSingleNavigation.ts",
     "TimeRangeOverlay.ts",
     "TimespanBreakdownOverlay.ts",
@@ -65,6 +63,7 @@ devtools_module("components") {
     "../../../ui/visual_logging:bundle",
     "../../emulation:bundle",
     "../../mobile_throttling:bundle",
+    "./insights:bundle",
   ]
 }
 
@@ -97,7 +96,6 @@ ts_library("unittests") {
     "NetworkRequestDetails.test.ts",
     "NetworkThrottlingSelector.test.ts",
     "SidebarAnnotationsTab.test.ts",
-    "SidebarInsight.test.ts",
   ]
 
   deps = [
