front_end/panesl/timeline/components/insights: fix missing deps
This is to fix build error like
https://ci.chromium.org/ui/p/chromium/builders/build/linux-chromeos-build-perf-ninja/1819/overview

Bug: 40253918, 344550388
Change-Id: I56941141f03a1e05997c07738502e01814ee9649
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5716090
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Takuto Ikuta <tikuta@chromium.org>
Commit-Queue: Takuto Ikuta <tikuta@chromium.org>

--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -18,6 +18,7 @@ devtools_module("insights") {
   ]
 
   deps = [
+    "../:css_files",
     "../../../../models/trace:bundle",
     "../../../../services/trace_bounds:bundle",
     "../../../../ui/components/helpers:bundle",
