[RPP] Allow users to right click an entry to reveal it in Network panel
Screencast: https://drive.google.com/file/d/1JVsWfL4pODHMteUvZhU6k_toFu2gRCak/view?usp=sharing

Bug: 347190309, 352512721
Change-Id: Ie500ef50c4af6c20173b5b63946a1012b9ab1c83
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5712988
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -155,6 +155,7 @@ devtools_entrypoint("bundle") {
     "../input/*",
     "../js_timeline/*",
     "../lighthouse/*",
+    "../network/*",
     "../recorder/*",
     "./track_appenders:unittests",
   ]
