[RPP] Allow users to right click on the url in details view to reveal it in Network panel
This just add one more option in the existed context menu, also remove the unnecessary load/save profile options.

Before: https://screenshot.googleplex.com/59eQ9wMKWDQMphV
After: https://screenshot.googleplex.com/6PSgYKo3SzCEk68

Bug: 347190877, 352512721
Change-Id: Ie5cefa18b27d869fecfdad2cb70c32292b4fa556
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5714828
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/network/BUILD.gn
+++ b/front_end/panels/network/BUILD.gn
@@ -78,7 +78,7 @@ devtools_module("network") {
     "../../panels/mobile_throttling:bundle",
     "../../panels/search:bundle",
     "../../panels/sources:bundle",
-    "../../panels/timeline:bundle",
+    "../../panels/timeline/utils:bundle",
     "../../panels/utils:bundle",
     "../../third_party/chromium/client-variations:bundle",
     "../../ui/components/expandable_list:bundle",
