--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -605,6 +605,7 @@ grd_files_release_sources = [
   "front_end/panels/timeline/extensions/extensions.js",
   "front_end/panels/timeline/timeline-meta.js",
   "front_end/panels/timeline/timeline.js",
+  "front_end/panels/timeline/utils/utils.js",
   "front_end/panels/utils/utils.js",
   "front_end/panels/web_audio/graph_visualizer/graph_visualizer.js",
   "front_end/panels/web_audio/web_audio-meta.js",
@@ -1770,6 +1771,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/timelinePaintProfiler.css.js",
   "front_end/panels/timeline/timelinePanel.css.js",
   "front_end/panels/timeline/timelineStatusDialog.css.js",
+  "front_end/panels/timeline/utils/NetworkRequest.js",
   "front_end/panels/web_audio/AudioContextContentBuilder.js",
   "front_end/panels/web_audio/AudioContextSelector.js",
   "front_end/panels/web_audio/WebAudioModel.js",
