[RPP] Add DocumentLatency insight for redirects and server response time
Bug: 313905799
Change-Id: I7a8bdd511f96c96ab4022f70ede313c028cc56c6
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5719103
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -9,6 +9,7 @@ import("../../visibility.gni")
 devtools_module("insights") {
   sources = [
     "CumulativeLayoutShift.ts",
+    "DocumentLatency.ts",
     "InsightRunners.ts",
     "InteractionToNextPaint.ts",
     "LargestContentfulPaint.ts",
@@ -39,6 +40,7 @@ ts_library("unittests") {
 
   sources = [
     "CumulativeLayoutShift.test.ts",
+    "DocumentLatency.test.ts",
     "InteractionToNextPaint.test.ts",
     "LargestContentfulPaint.test.ts",
     "RenderBlocking.test.ts",
