--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -191,6 +191,7 @@ group("unittests") {
     "panels/timeline/components:unittests",
     "panels/timeline/components/insights:unittests",
     "panels/timeline/fixtures/traces",
+    "panels/timeline/overlays:unittests",
     "panels/timeline/track_appenders:unittests",
     "panels/utils:unittests",
     "panels/web_audio:unittests",
