--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1751,6 +1751,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/LCPPhases.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
   "front_end/panels/timeline/components/insights/sidebarInsight.css.js",
+  "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
   "front_end/panels/timeline/components/networkRequestDetails.css.js",
