--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -203,6 +203,7 @@ ts_library("unittests") {
     "ListModel.test.ts",
     "ListWidget.test.ts",
     "ShortcutRegistry.test.ts",
+    "SplitWidget.test.ts",
     "SuggestBox.test.ts",
     "Toolbar.test.ts",
     "Treeoutline.test.ts",
