[Freestyler] Don't show feedback form if logging is disabled
We can't collect the data back if the logging is disable so
don't show it to reduce confusion

Bug: none
Change-Id: I671d885c6cf17334e407ddb1c43f2b7c42366c48
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5741201
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -68,6 +68,7 @@ ts_library("unittests") {
     "FreestylerEvaluateAction.test.ts",
     "FreestylerPanel.test.ts",
     "components/FreestylerChatUi.test.ts",
+    "components/ProvideFeedback.test.ts",
   ]
 
   deps = [
