Create rehydrated devtools app for enhanced traces
This is the app used for enhanced traces. Currently it supports source and performance panel.

Sample session: https://imgur.com/a/ogWFW8x

Bug: 337909145
Change-Id: I4356f9e63b0809a8ab50da97ce02db3ebd29da8b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5741927
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -328,6 +328,7 @@ grd_files_release_sources = [
   "front_end/entrypoints/main/main.js",
   "front_end/entrypoints/ndb_app/ndb_app.js",
   "front_end/entrypoints/node_app/node_app.js",
+  "front_end/entrypoints/rehydrated_devtools_app/rehydrated_devtools_app.js",
   "front_end/entrypoints/shell/shell.js",
   "front_end/entrypoints/wasmparser_worker/wasmparser_worker-entrypoint.js",
   "front_end/entrypoints/wasmparser_worker/wasmparser_worker.js",
@@ -622,6 +623,7 @@ grd_files_release_sources = [
   "front_end/panels/web_audio/web_audio.js",
   "front_end/panels/webauthn/webauthn-meta.js",
   "front_end/panels/webauthn/webauthn.js",
+  "front_end/rehydrated_devtools_app.html",
   "front_end/services/puppeteer/puppeteer.js",
   "front_end/services/trace_bounds/trace_bounds.js",
   "front_end/services/tracing/tracing.js",
