--- a/front_end/entrypoints/inspector_main/BUILD.gn
+++ b/front_end/entrypoints/inspector_main/BUILD.gn
@@ -68,6 +68,7 @@ devtools_entrypoint("meta") {
   visibility = [
     "../../testing/*",
     "../devtools_app/*",
+    "../rehydrated_devtools_app/*",
   ]
 }
 
