--- a/front_end/entrypoints/main/BUILD.gn
+++ b/front_end/entrypoints/main/BUILD.gn
@@ -52,6 +52,7 @@ devtools_entrypoint("bundle") {
     "../js_app:*",
     "../ndb_app:*",
     "../node_app:*",
+    "../rehydrated_devtools_app:*",
     "../worker_app:*",
   ]
 
@@ -72,7 +73,10 @@ devtools_entrypoint("meta") {
     "../../ui/legacy/components/utils:bundle",
   ]
 
-  visibility = [ "../shell/*" ]
+  visibility = [
+    "../rehydrated_devtools_app:*",
+    "../shell/*",
+  ]
 }
 
 ts_library("unittests") {
