[RPP] LCP discovery sidebar insight
Bug: 350770410
Change-Id: I1913242493b2aaf5819d2485a13a136f799b5f7f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5739837
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1747,6 +1747,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/Utils.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/fieldSettingsDialog.css.js",
+  "front_end/panels/timeline/components/insights/LCPDiscovery.js",
   "front_end/panels/timeline/components/insights/LCPPhases.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
   "front_end/panels/timeline/components/insights/sidebarInsight.css.js",
