RPP: migrate sidebar to DevTools TabbedPane
So that we follow the GM3 guidelines and ensure consistency with the
rest of the panel, we will use the TabbedPane component.

The TabbedPane component takes a widget-per-tab, so our structure is
now:

SidebarWidget

=> InsightsView (widget)
  => SidebarInsightsTab (component)
=> AnnotationsView (widget)
  => SidebarAnnotationsTab (component)

Bug: 348591291
Change-Id: I0de7969d131c63f43e9e3f869b1b1db30553d7df
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5746534
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1745,6 +1745,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/NetworkThrottlingSelector.js",
   "front_end/panels/timeline/components/Sidebar.js",
   "front_end/panels/timeline/components/SidebarAnnotationsTab.js",
+  "front_end/panels/timeline/components/SidebarInsightsTab.js",
   "front_end/panels/timeline/components/SidebarSingleNavigation.js",
   "front_end/panels/timeline/components/Utils.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
@@ -1758,8 +1759,8 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/liveMetricsView.css.js",
   "front_end/panels/timeline/components/networkRequestDetails.css.js",
   "front_end/panels/timeline/components/networkRequestTooltip.css.js",
-  "front_end/panels/timeline/components/sidebar.css.js",
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
+  "front_end/panels/timeline/components/sidebarInsightsTab.css.js",
   "front_end/panels/timeline/components/sidebarSingleNavigation.css.js",
   "front_end/panels/timeline/extensions/ExtensionUI.js",
   "front_end/panels/timeline/historyToolbarButton.css.js",
