--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -15,8 +15,8 @@ generate_css("css_files") {
     "liveMetricsView.css",
     "networkRequestDetails.css",
     "networkRequestTooltip.css",
-    "sidebar.css",
     "sidebarAnnotationsTab.css",
+    "sidebarInsightsTab.css",
     "sidebarSingleNavigation.css",
   ]
 }
@@ -35,6 +35,7 @@ devtools_module("components") {
     "NetworkThrottlingSelector.ts",
     "Sidebar.ts",
     "SidebarAnnotationsTab.ts",
+    "SidebarInsightsTab.ts",
     "SidebarSingleNavigation.ts",
     "Utils.ts",
   ]
