[deps] Upgrade TypeScript to 5.5.4
TypeScript 5.5.4 fixes the crashing tsserver when using vscode with
the devtools-frontend repo.

We have to pin the "ws" package to 8.18.0 manually. Normally
'npm dedupe' would handle this, but 'dedupe' wants to pull in the
'debug' package thats only 4 days old.

We can remove the 'override' once 'npm dedupe' runs successfully
again.

R=alexrudenko@chromium.org

Bug: None
Change-Id: I3e8ad9b5b5f999f9f60758313167230724e8dddc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5752041
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Simon Zünd <szuend@chromium.org>

--- a/package.json
+++ b/package.json
@@ -110,9 +110,12 @@
     "stylelint-config-standard": "24.0.0",
     "svgo": "2.8.0",
     "terser": "5.19.1",
-    "typescript": "5.5.3",
+    "typescript": "5.5.4",
     "webidl2": "24.2.2",
     "ws": "8.18.0",
     "yargs": "17.3.1"
+  },
+  "overrides": {
+    "ws": "$ws"
   }
 }
