Add shared disclaimer to Chrome AI settings tab
Screenshot: https://i.imgur.com/JIqIau2.png

Bug: 351743687, 350668580
Change-Id: I0034b4853c554d83681f612460743f22d1e12bcc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5750961
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -20,6 +20,7 @@ grd_files_release_sources = [
   "front_end/Images/accelerometer-left.png",
   "front_end/Images/accelerometer-right.png",
   "front_end/Images/accelerometer-top.png",
+  "front_end/Images/account-box.svg",
   "front_end/Images/align-content-center.svg",
   "front_end/Images/align-content-end.svg",
   "front_end/Images/align-content-space-around.svg",
@@ -57,6 +58,7 @@ grd_files_release_sources = [
   "front_end/Images/brush.svg",
   "front_end/Images/bug.svg",
   "front_end/Images/bundle.svg",
+  "front_end/Images/calendar-today.svg",
   "front_end/Images/check-circle.svg",
   "front_end/Images/check-double.svg",
   "front_end/Images/checker.svg",
@@ -83,6 +85,7 @@ grd_files_release_sources = [
   "front_end/Images/console-logpoint.svg",
   "front_end/Images/cookie.svg",
   "front_end/Images/copy.svg",
+  "front_end/Images/corporate-fare.svg",
   "front_end/Images/credit-card.svg",
   "front_end/Images/cross-circle-filled.svg",
   "front_end/Images/cross-circle.svg",
@@ -139,6 +142,8 @@ grd_files_release_sources = [
   "front_end/Images/gear-filled.svg",
   "front_end/Images/gear.svg",
   "front_end/Images/gears.svg",
+  "front_end/Images/globe.svg",
+  "front_end/Images/google.svg",
   "front_end/Images/goto-filled.svg",
   "front_end/Images/heap-snapshot.svg",
   "front_end/Images/heap-snapshots.svg",
@@ -197,6 +202,7 @@ grd_files_release_sources = [
   "front_end/Images/popup.svg",
   "front_end/Images/preview_feature_video_thumbnail.svg",
   "front_end/Images/profile.svg",
+  "front_end/Images/psychiatry.svg",
   "front_end/Images/record-start.svg",
   "front_end/Images/record-stop.svg",
   "front_end/Images/redo.svg",
