--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -27,6 +27,7 @@ devtools_svg_sources = [
   "3d-rotate.svg",
   "accelerometer-back.svg",
   "accelerometer-front.svg",
+  "account-box.svg",
   "align-content-center.svg",
   "align-content-end.svg",
   "align-content-space-around.svg",
@@ -64,6 +65,7 @@ devtools_svg_sources = [
   "brush.svg",
   "bug.svg",
   "bundle.svg",
+  "calendar-today.svg",
   "check-circle.svg",
   "check-double.svg",
   "checker.svg",
@@ -87,6 +89,7 @@ devtools_svg_sources = [
   "console-logpoint.svg",
   "cookie.svg",
   "copy.svg",
+  "corporate-fare.svg",
   "credit-card.svg",
   "cross-circle-filled.svg",
   "cross-circle.svg",
@@ -142,6 +145,8 @@ devtools_svg_sources = [
   "gear-filled.svg",
   "gear.svg",
   "gears.svg",
+  "globe.svg",
+  "google.svg",
   "goto-filled.svg",
   "heap-snapshot.svg",
   "heap-snapshots.svg",
@@ -196,6 +201,7 @@ devtools_svg_sources = [
   "popup.svg",
   "preview_feature_video_thumbnail.svg",
   "profile.svg",
+  "psychiatry.svg",
   "record-start.svg",
   "record-stop.svg",
   "redo.svg",
