--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1761,6 +1761,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/LCPDiscovery.js",
   "front_end/panels/timeline/components/insights/LCPPhases.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
+  "front_end/panels/timeline/components/insights/lcpDiscovery.css.js",
   "front_end/panels/timeline/components/insights/sidebarInsight.css.js",
   "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
