--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -8,7 +8,10 @@ import("../../../../../scripts/build/ninja/generate_css.gni")
 import("../../../../../third_party/typescript/typescript.gni")
 
 generate_css("css_files") {
-  sources = [ "sidebarInsight.css" ]
+  sources = [
+    "lcpDiscovery.css",
+    "sidebarInsight.css",
+  ]
 }
 
 devtools_module("insights") {
